# CPP-07-Part-2-CW-RaceGame-Classic

./: CMakeLists.txt  readme.md
RaceApp/headers/: utility.h
RaceApp/resources/: botcallsigns.txt  botnames.txt
RaceApp/src/: racesim.cpp  utility.cpp
RaceLib/includes/: RaceLibExceptions.h  avbroom.h  avcarpet.h  aveagle.h  gvboots.h  gvcentaur.h  gvhumpback.h  gvhumpbackfast.h  set_defines.h  vehicle.h  vehicleair.h  vehicleground.h
RaceLib/src/: avbroom.cpp  avcarpet.cpp  aveagle.cpp  gvboots.cpp  gvcentaur.cpp  gvhumpback.cpp  gvhumpbackfast.cpp  vehicle.cpp  vehicleair.cpp  vehicleground.cpp
